...
        tabBarBackground: TabBarBackground,
      }}
    >
      <Tabs.Screen
        name="feed/index"
        options={{
          title: 'ホーム',
          tabBarLabel: ({ focused }) => (
            <TabLabel label="ホーム" focused={focused} />
          ),
          tabBarIcon: ({ color, focused }) => (
            <NavTabIcon focused={focused}>
              <TabBarIcon name="home" color={color} focused={focused} size={20} />
...
          tabBarAccessibilityLabel: '通知',
        }}
      />
      <Tabs.Screen
        name="profile/index"
        options={{
          title: 'プロフィール',
          tabBarLabel: ({ focused }) => (
            <TabLabel label="プロフィール" focused={focused} />
          ),
          tabBarIcon: ({ color, focused }) => (
            <NavTabIcon focused={focused}>
              <TabBarIcon name="user" color={color} focused={focused} size={20} />
...
